# qvac-fabric-llm.cpp

./: .ecrc  .flake8  CMakeLists.txt  README.md  convert_hf_to_gguf.py  merging_strategy.md  pyrightconfig.json  vulkan_profiling_analyzer.py
.github/: CODEOWNERS
.github/workflows/: approval-check-worker.yml  build-android-vulkan-artifact.yml  build-android-vulkan-termux.yml  build-cmake-pkg.yml  build-cross.yml  build-linux-cross.yml  build-sanitize.yml  build-vulkan.yml  build-webgpu.yml  build.yml  check-approvals.yml  security-baseline.yml
ci/: run.sh
cmake/: llama-config.cmake.in
common/: CMakeLists.txt  arg.cpp  chat-auto-parser.h  chat-parser.cpp  chat.cpp  chat.h  common.cpp  common.h  hf-cache.cpp  log.cpp  log.h
common_test/: CMakeLists.txt  load_into_memory.h  uint8-buff-stream-wrapper.h
docs/: turboquant-benchmarks.md
docs/backend/hexagon/: CMakeUserPresets.json
examples/embedding/: CMakeLists.txt  embedding.cpp
examples/llama.swiftui/llama.cpp.swift/: LibLlama.swift
examples/llama.swiftui/llama.swiftui.xcodeproj/: project.pbxproj
examples/llama.swiftui/llama.swiftui/Bridging/: FinetuneBridge.h  FinetuneBridge.mm  llama_swiftui-Bridging-Header.h
examples/llama.swiftui/llama.swiftui/Models/: LlamaState.swift
examples/llama.swiftui/llama.swiftui/UI/: ContentView.swift  DownloadButton.swift  InputButton.swift
examples/simple/: CMakeLists.txt  simple.cpp
examples/simple-cmake-pkg/: CMakeLists.txt
examples/training/: CMakeLists.txt  README.md  finetune-lora.cpp  finetune.cpp
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-opt.h  ggml-rpc.h  ggml.h  gguf.h  uint8-buff-stream.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-meta.cpp  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-common.h  ggml-opt.cpp  ggml-quants.c  ggml-quants.h  ggml.c  gguf.cpp  uint8-buff-stream.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.c  quants.h  repack.cpp  vec.h
ggml/src/ggml-cuda/: ggml-cuda.cu  out-prod.cu
ggml/src/ggml-metal/: ggml-metal-context.m  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.cpp  ggml-metal.metal
ggml/src/ggml-opencl/: CMakeLists.txt  ggml-opencl.cpp
ggml/src/ggml-opencl/kernels/: concat.cl  conv2d_dw.cl  cumsum.cl  diag.cl  dnet_ar.cl  exp.cl  flash_attn_f32_f16.cl  gated_delta_net.cl  get_rows.cl  hardsigmoid.cl  hardswish.cl  l2_norm.cl  neg.cl  pool_2d.cl  set_rows.cl
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  copy_from_quant.comp  copy_to_quant.comp  count_equal_masked.comp  cross_entropy_loss_back.comp  cross_entropy_loss_masked_back.comp  dequant_funcs.glsl  dequant_funcs_cm2.glsl  dequant_tbq3_0.comp  dequant_tbq4_0.comp  dequant_tq1_0.comp  dequant_tq2_0.comp  dnet_ar.comp  flash_attn.comp  flash_attn_base.glsl  flash_attn_cm1.comp  flash_attn_cm2.comp  geglu_back.comp  mul_mat_vec_q4_k.comp  mul_mat_vec_q6_k.comp  mul_mat_vec_tbq3_0.comp  mul_mat_vec_tbq4_0.comp  mul_mat_vec_tq1_0.comp  mul_mat_vec_tq1_0_q.comp  mul_mat_vec_tq2_0.comp  mul_mat_vec_tq2_0_q.comp  mul_mat_vecq.comp  mul_mat_vecq_funcs.glsl  mul_mm_funcs.glsl  mul_mm_tbq_qjl_correction.comp  mul_mmq.comp  mul_mmq_funcs.comp  mul_mmq_funcs.glsl  out_prod.comp  out_prod_q4_0.comp  (+10 more)
gguf-py/gguf/: tensor_mapping.py
include/: llama-cpp.h  llama.h
requirements/: requirements-all.txt  requirements-tool_bench.txt
scripts/: compute_tq_codebooks.py  requirements.txt
scripts/android-vulkan/: README.md  bench-ternary.sh  env.sh  start-ternary-stable.sh
scripts/tune/: tune.py  tune_quality.py  tune_requirements.txt  tune_tps.py
src/: CMakeLists.txt  llama-adapter.cpp  llama-arch.cpp  llama-arch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-hparams.cpp  llama-hparams.h  llama-impl.h  llama-io.cpp  llama-io.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-lora-training.cpp  llama-lora-training.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-load-input.cpp  llama-model-load-input.h  llama-model-load.cpp  llama-model-load.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-quant.cpp  (+2 more)
src/models/: delta-net-base.cpp  gemma4-iswa.cpp  gemma4.cpp  models.h  qwen35.cpp  qwen35moe.cpp
tests/: CMakeLists.txt  kv_cache_bench_common.sh  kv_cache_eval_common.py  leval-bench.sh  leval-prepare.py  leval-score.py  longbench-bench.sh  longbench-prepare.py  longbench-score.py  niah-bench.sh  niah-prepare.py  niah-score.py  ruler-bench.sh  test-backend-ops.cpp  test-copy-tbq-subgroups.cpp  test-gguf.cpp  test-kv-cache-leval.py  test-kv-cache-longbench.py  test-kv-cache-niah.py  test-kv-cache-quantization-perf-agg.py  test-kv-cache-quantization-perf.sh  test-kv-cache-quantization-perp-agg.py  test-kv-cache-quantization-perp.sh  test-kv-cache-ruler.py  test-kv-cache-zeroscrolls.py  test-memory-seq-token-count.cpp  test-model-load-cancel.cpp  test-model-load-disk.cpp  test-model-load-memory-split.cpp  test-model-load-memory.cpp  test-mtmd-c-api.c  test-multi-instance-repro.cpp  test-quantize-fns.cpp  test-quantize-perf.cpp  test-tokenizers-repo.sh  test-turboquant.sh  zeroscrolls-bench.sh  zeroscrolls-prepare.py  zeroscrolls-score.py
tools/: CMakeLists.txt
tools/cli/: cli.cpp
tools/gguf-split/: gguf-split.cpp
tools/llama-bench/: llama-bench.cpp
tools/mtmd/: CMakeLists.txt  README.md  clip-impl.h  clip-model.h  clip.cpp  clip.h  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-image.cpp  mtmd-image.h  mtmd.cpp  mtmd.h
tools/mtmd/models/: models.h  qwen3vl.cpp
tools/server/: server-context.cpp
tools/server/tests/: requirements.txt
(+5 files in other folders)
